# helsing-bsa

./: .editorconfig  README.md
.github/workflows/: api.yml  deploy-staging.yml  deploy.yml  infrastructure.yml  test.yml
api/: .gitignore  .rustfmt.toml  Cargo.toml  build.rs
api/lib/: greet.rs  mod.rs  response.rs
api/macros/: .gitignore  Cargo.toml
api/macros/src/: lib.rs
api/routes/: get.rs
api/routes/hello/: get.rs
api/routes/hello/{user}/: get.rs
deployment/: __main__.py  pyproject.toml
deployment/infrastructure/: api.py  naming.py  routes.py
infrastructure/: .gitignore  Pulumi.yaml  __main__.py  pyproject.toml
infrastructure/src/: api.py  naming.py  routes.py  routes_test.py
tests/: requirements.txt  test_api.py
