[project]
name = "bsa-infrastructure"
dynamic = ["version"]
dependencies = [
    "pulumi>=3.130.0,<4.0.0",
    "pulumi-aws>=6.50.0,<7.0.0",
    "pulumi-aws-apigateway>=2.6.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    # Static checks:
    "ruff", # linter
    "pyright", # type-checker
    # Testing:
    "pytest",
]
