[project]
name = "bsa-infrastructure"
dynamic = ["version"]
dependencies = [
    "pulumi>=3.130.0,<4.0.0",
    "pulumi-aws>=6.50.0,<7.0.0",
    "pulumi-aws-apigateway>=2.6.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    # Static checks:
    "ruff", # linter
    "pyright", # type-checker
    # Testing:
    "pytest",
]

[tool.ruff]
line-length = 120
indent-width = 4
[tool.ruff.lint]
select = [
    "ANN",
    "COM",
    "E",
    "ERA",
    "F", 
    "FA",
    "I",
    "N",
    "PIE",
    "PT",
    "PTH",
    "SIM",
    "W",
]
ignore = [
    "E701", # I like these, IMO they make things more readable
]
flake8-annotations.suppress-none-returning = true
isort.combine-as-imports = true
[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
